# a2a

./: .coverage-baseline.json  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  ARCHITECTURE_REVIEW.md  BUSINESS_PLAN.md  CHANGELOG.md  CLAUDE.md  CMO_ANALYSIS.md  CMO_MARKETING_REPORT.md  CUSTOMER_AGENT_FEEDBACK.md  DEPLOYMENT.md  Dockerfile  Dockerfile.claude  MARKET_RESEARCH.md  MASTER_LOG.md  NEXT_STEPS.md  OVERNIGHT_REPORT.md  OVERNIGHT_REPORT_20260327.md  PLAN_v2.md  PLAYBOOK.md  PROMPTS.md  README.md  RUFF_ACTION_ITEMS.md  SKILL.md  check_server.sh  coverage-badge.json  customer_agent_report.py  deploy.sh  docker-compose.yml  e2e_tests.py  mypy.ini  pricing.json  pyproject.toml  requirements.txt  ruff.toml  run_claude.sh  (+1 more)
gateway/: main.py  pyproject.toml
gateway/benchmarks/: __init__.py  bench_runner.py  results.json  run_benchmarks.py  scenarios.py  test_benchmarks.py
gateway/src/: _version.py  admin_audit.py  anomaly.py  app.py  auth.py  authorization.py  bootstrap.py  catalog.json  catalog.py  cleanup_tasks.py  config.py  contracts.py  db.py  disputes.py  errors.py  event_handlers.py  gatekeeper_metrics.py  health_monitor.py  integration_generator.py  lifespan.py  mcp_proxy.py  mcp_registry.py  middleware.py  openapi.py  rate_limit_headers.py  serialization.py  signing.py  sql_validator.py  stripe_checkout.py  stripe_env_check.py  swagger.py  tool_errors.py  tools.py  trust_adapter.py  url_validator.py  validators.py  webhooks.py  x402.py
gateway/src/middleware/: __init__.py  body_size.py  client_ip.py  correlation.py  https.py  logging.py  metrics.py  rate_limit.py  security_headers.py  timeout.py  validation.py
gateway/src/routes/: agent_card.py  batch.py  execute.py  health.py  onboarding.py  pricing.py  register.py  sse.py  websocket.py  well_known.py
gateway/src/tools/: __init__.py  _pagination.py  _schemas.py  _validators.py  billing.py  gatekeeper.py  identity.py  infrastructure.py  marketplace.py  messaging.py  payments.py  trust.py
gateway/tests/: conftest.py  test_admin_audit.py  test_agent_id_length.py  test_agent_leaderboard.py  test_agent_search.py  test_anomaly.py  test_audit_log_access.py  test_audit_regressions.py  test_authorization.py  test_batch_execution.py  test_billing_ownership.py  test_body_size_limit.py  test_bola_sanitization.py  test_budget_caps.py  test_cancel_escrow.py  test_capture_refund_balance_conservation.py  test_cleanup_tasks.py  test_contract_models.py  test_convert_currency_atomic.py  test_cost_estimation.py  test_create_api_key.py  test_currency_and_keys.py  test_customer_report_batch1.py  test_customer_report_batch2.py  test_customer_report_batch3.py  test_customer_report_batch4.py  test_customer_report_batch5.py  test_customer_report_batch6.py  test_data_retention.py  test_db_permissions.py  test_db_security_tools.py  test_deposit_limits.py  test_deps.py  test_disputes.py  test_edge_cases.py  test_error_envelope.py  test_error_handler_logging.py  test_error_request_id.py  test_event_handlers.py  test_event_schema_registry.py  (+102 more)
gateway/tests/perf/: test_health_p50_slo.py
gateway/tests/v1/: test_atlas.py  test_audit_v130.py  test_audit_v131.py  test_audit_v132_remediation.py  test_audit_v1_2_1_regressions.py  test_audit_v1_2_2_regressions.py  test_audit_v1_2_3_regressions.py  test_auth_strip.py  test_billing.py  test_budget_cap_enforcement.py  test_budget_caps.py  test_concurrent_deposit.py  test_decimal_precision.py  test_disputes.py  test_execute_deprecation.py  test_idempotency_collision.py  test_identity.py  test_identity_org.py  test_infra.py  test_infra_admin_gate.py  test_marketplace.py  test_messaging.py  test_messaging_routes.py  test_metrics_tiered.py  test_payments.py  test_trust.py
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/tests/: conftest.py  test_base.py  test_schemas.py  test_toolkit.py  test_tools.py
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/tests/: conftest.py  test_base.py  test_schemas.py  test_toolkit.py  test_tools.py
products/billing/: .coverage  README.md  pyproject.toml
products/billing/src/: __init__.py  budget.py  events.py  exchange.py  models.py  org_billing.py  policies.py  pricing.py  storage.py  tracker.py  wallet.py
products/billing/tests/: conftest.py  test_auto_reload.py  test_budget_caps.py  test_coverage_gaps.py  test_events.py  test_integer_storage.py  test_integration.py  test_migrations.py  test_multi_currency.py  test_org_billing.py  test_policies.py  test_signup_bonus.py  test_storage.py  test_tracker.py  test_transaction_isolation.py  test_wallet.py  test_wallet_edges.py
products/connectors/github/: .coverage  README.md  pyproject.toml
products/connectors/postgres/: README.md  pyproject.toml
products/connectors/stripe/: README.md  pyproject.toml
products/identity/: pyproject.toml
products/identity/src/: __init__.py  api.py  crypto.py  data_lifecycle.py  models.py  observability.py  org_api.py  storage.py
products/identity/tests/: conftest.py  test_api.py  test_crypto.py  test_data_lifecycle.py  test_metric_signing.py  test_metrics_ingestion.py  test_observability.py  test_organizations.py  test_p0_fixes.py  test_p1_fixes.py  test_p2_protocol.py  test_p3_extensibility.py  test_storage.py  test_sub_identity.py  test_timeseries_storage.py
products/mcp_server/: README.md  pyproject.toml
products/mcp_server/tests/: conftest.py  test_cli.py  test_gatekeeper_tools.py  test_gateway_client.py  test_server.py  test_tool_discovery.py
products/messaging/: pyproject.toml
products/messaging/src/: __init__.py  api.py  crypto.py  models.py  storage.py
products/messaging/tests/: conftest.py  test_api.py  test_encryption.py  test_negotiation.py  test_storage.py
products/payments/: README.md  pyproject.toml
products/paywall/: .coverage  pyproject.toml
products/trust/: .coverage  pyproject.toml
sdk/: README.md  pyproject.toml
sdk/tests/: test_audit_v130.py  test_client.py  test_register_agent_contract.py  test_sdk_methods.py  test_verifier.py
(+517 files in other folders)
