[project]
name = "a2a-gateway"
version = "0.2.0"
description = "HTTP gateway for A2A Commerce platform"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.37",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
