[project]
name = "a2a-gateway"
version = "0.2.0"
description = "HTTP gateway for A2A Commerce platform"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.37",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "bandit>=1.8",
    "hypothesis>=6.0",
    "schemathesis>=3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]
