[project]
name = "a2a-greenhelix-sdk"
version = "1.2.2"
description = "Python SDK for the A2A Commerce gateway — agent-to-agent payments, escrow, marketplace, identity, and trust scoring"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Green Helix", email = "dev@greenhelix.net" },
]
keywords = [
    "a2a",
    "ai-agent",
    "agent-payments",
    "mcp",
    "escrow",
    "trust",
    "marketplace",
    "commerce",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://greenhelix.net"
Documentation = "https://api.greenhelix.net/docs"
Repository = "https://github.com/mirni/a2a"
Changelog = "https://github.com/mirni/a2a/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
