[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-langchain"
version = "0.1.0"
description = "LangChain tool wrapper for the A2A Commerce Platform SDK"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "GreenHelix", email = "dev@greenhelix.net" }]
keywords = ["a2a", "langchain", "agent", "commerce", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "langchain-core>=0.2",
    "a2a-greenhelix-sdk",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://greenhelix.net"
Documentation = "https://docs.greenhelix.net"
Repository = "https://github.com/greenhelix/a2a-commerce"
Issues = "https://github.com/greenhelix/a2a-commerce/issues"

[tool.setuptools.packages.find]
where = ["src"]
