[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-messaging"
version = "0.1.0"
description = "Typed message protocol for price negotiation and task specification between agents"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
