[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-connector-postgres"
version = "0.2.0"
description = "Production-grade PostgreSQL MCP connector with safety guarantees"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "asyncpg>=0.30",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
